put pdb after collections

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -25,8 +25,8 @@
     "- Standard Library\n",
     "    - itertools\n",
     "    - random\n",
-    "    - pdb\n",
     "    - defaultdict\n",
+    "    - pdb\n",
     "- External \n",
     "    - Django, Flask (web frameworks)\n",
     "    - BeautifulSoup (scraping websites)\n",
@@ -36,6 +36,7 @@
     "- The python toolkit\n",
     "    - pip\n",
     "    - virtualenv\n",
+    "    - anaconda\n",
     "- Community / Drama / Resources\n",
     "    - 2v3\n",
     "    - Conferences\n",
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -230,7 +231,7 @@
        "'H ynm sSmn'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -253,7 +254,7 @@
        "'nomiS si eman ym iH'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -316,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -348,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -372,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -400,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -426,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -454,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -485,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -519,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -545,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -554,7 +555,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<itertools.combinations object at 0x104663578>\n"
+      "<itertools.combinations object at 0x1049bc208>\n"
      ]
     }
    ],
@@ -585,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -607,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -617,7 +618,7 @@
      "output_type": "stream",
      "text": [
       "r: 1\n",
-      "y: <generator object count_using_yield at 0x104644cd0>\n"
+      "y: <generator object count_using_yield at 0x1049a1690>\n"
      ]
     }
    ],
@@ -630,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -676,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -714,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -725,7 +726,7 @@
        "[2, 2, 4, 2, 5]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -764,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -775,7 +776,7 @@
        "['HI', 'MY', 'NAME', 'IS', 'SIMON']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -804,7 +805,7 @@
        "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -827,7 +828,7 @@
        "['Hi', 'My', 'is']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -860,10 +861,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
+      "6\n",
+      "4\n",
       "9\n",
-      "9\n",
-      "7\n",
+      "6\n",
       "1\n"
      ]
     }
@@ -879,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -887,16 +888,47 @@
     {
      "data": {
       "text/plain": [
-       "[5, 1, 6, 7, 2]"
+       "[8, 5, 0, 6, 4]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "random.sample(numbers, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## collections - fancy containers\n",
+    "\n",
+    "### defaultdict - dictionaries with default values for keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "dd = defaultdict(list)\n",
+    "print dd['keyIhaventseenbefore']"
    ]
   },
   {
@@ -957,37 +989,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## collections - fancy containers\n",
-    "\n",
-    "### defaultdict - dictionaries with default values for keys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from collections import defaultdict\n",
-    "\n",
-    "dd = defaultdict(list)\n",
-    "print dd['keyIhaventseenbefore']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# The Python Ecosystem - External Libraries\n",
     "\n",
     "Beautiful thing about python is that other people like it and build libraries to do useful stuff for it.\n",
@@ -995,16 +996,20 @@
     "- Django, Flask (web frameworks)\n",
     "    - Pinterest, Bitbucket built on Django\n",
     "- BeautifulSoup (scraping websites)\n",
-    "- numpy, matplotlib, jupyter (numerical/scientific computing)\n",
+    "- numpy, matplotlib (numerical/scientific computing)\n",
     "- nltk (natural language processing)\n",
     "- sklearn (machine learning and data science)\n",
+    "- jupyter notebooks\n",
+    "    - tool primarily used for data science, scientific computing, but I find it useful pedagogy and presentations as well\n",
     "\n",
     "## Libaries for managing these libraries\n",
     "\n",
     "- pip (python package manager)\n",
     "    - e.g. `pip install django`\n",
     "- virtualenv (create a contained python environment)\n",
-    "    - for managing different versions of libraries"
+    "    - for managing different versions of libraries\n",
+    "- anaconda (for jupyter notebooks, data science stuff)\n",
+    "    - not sure how well this plays with the above though..."
    ]
   },
   {
@@ -1045,15 +1050,6 @@
     "- Books\n",
     "    - There was a one python book at my local library, just checked that out and read it"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
