--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -46,10 +46,7 @@
     "- basic python syntax (for loops, variable declarations, strings)\n",
     "- basic python data structures (lists, dictionaries)\n",
     "- how to write functions in python\n",
-    "- `len`, `range`, basic built in functions\n",
-    "\n",
-    "\n",
-    "\n"
+    "- `len`, `range`, basic built in functions\n"
    ]
   },
   {
@@ -60,11 +57,15 @@
     }
    },
    "source": [
-    "## What is this workshop\n",
+    "# What is this workshop\n",
     "\n",
     "- The only real unifying theme of this talk is that it's going to be features of python that I (Simon) like or think are cool / interesting / useful about python that go beyond the basics.\n",
     "- [Not a beginner, not an expert](http://afabbro.github.io/jsconf2013/), [video](https://www.youtube.com/watch?v=v0TFmdO4ZP0) - good talk on being an intermediate programmer\n",
-    "- Code / presentation is at https://github.com/simzou/python-workshop, [web page](simzou.github.io/python-workshop), [alternative](https://github.com/simzou/python-workshop/blob/master/workshop.md)\n",
+    "- Code and presentation links:\n",
+    "    - Code - https://github.com/simzou/python-workshop\n",
+    "    - [web page](http://simzou.github.io/python-workshop) - http://simzou.github.io/python-workshop\n",
+    "    - [alternative web page](https://github.com/simzou/python-workshop/blob/master/workshop.md)\n",
+    "    - [slides](http://simzou.github.io/python-workshop/slides.html) - http://simzou.github.io/python-workshop/slides.html\n",
     "- This is a jupyter notebook, if you have it installed you can run the code in this talk by double clicking a code cell and hitting shift+enter. If you don't, don't worry about it, will talk about it later.\n"
    ]
   },
