gonna use slides now

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -66,7 +66,7 @@
     "    - [web page](http://simzou.github.io/python-workshop) - http://simzou.github.io/python-workshop\n",
     "    - [alternative web page](https://github.com/simzou/python-workshop/blob/master/workshop.md)\n",
     "    - [slides](http://simzou.github.io/python-workshop/slides.html) - http://simzou.github.io/python-workshop/slides.html\n",
-    "- This is a jupyter notebook, if you have it installed you can run the code in this talk by double clicking a code cell and hitting shift+enter. If you don't, don't worry about it, will talk about it later.\n"
+    "- Slides were made using a jupyter notebook, more info about them later\n"
    ]
   },
   {
