--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -93,7 +93,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -147,7 +147,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -260,7 +260,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
