--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -9,11 +9,21 @@
    },
    "source": [
     "# Intermediate Python Workshop\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "## Agenda\n",
     "\n",
     "- Introductions\n",
-    "- Motivation\n",
+    "    - Motivation\n",
     "- Warm-ups\n",
     "    - sorted, slicing, sets\n",
     "- Fancy Python Shortcuts and Concepts and stuff\n",
@@ -51,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -71,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -93,7 +103,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
@@ -147,7 +157,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -260,7 +270,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -1228,13 +1238,143 @@
    "source": [
     "# Python 2 vs Python 3 drama and notes\n",
     "\n",
-    "- In 2008 python 3 was released. It is a technically \"better\" language (more consistent, efficient, better Unicode support) but it was not backwards compatible with python 2. This made people unhappy.\n",
-    "    - division is by default integer division in python 2 but is floating point in python 3\n",
-    "        - you can get python 3 division (and others similarly) in python 2 by including `from __future__ import division` in your python file\n",
-    "    - instead of `print \"Hello World\"` you now have to do `print(\"Hello World\")` in python 3. In some ways this is a small change, in other ways it's a huge change that got people most upset\n",
-    "- Python 2 \"just worked\" so adoption has been slow. As of 2015, more people were still using python 2 [[citation]](http://stackoverflow.com/questions/30751668/python-2-vs-python-3-2015-usage)\n",
-    "- Part of the problem is that every major library had to be rewritten in python 3, so many did not support python 3 for a while\n",
-    "- I still use python 2"
+    "- In 2008 python 3 was released\n",
+    "- it was not backwards compatible with python 2\n",
+    "- This made people unhappy.\n",
+    "- As of 2015, more people were still using python 2 [[citation]](http://stackoverflow.com/questions/30751668/python-2-vs-python-3-2015-usage)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Division is different"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2/3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6666666666666666"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# this was on Eggert's 131 final last quarter\n",
+    "from __future__ import division\n",
+    "2/3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Printing is different"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "# no longer valid in python 3\n",
+    "print \"Hello World\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print is a now a function\n",
+    "print (\"Hello World\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Range is different\n",
+    "\n",
+    "- As mentioned previously"
    ]
   },
   {
